---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.10941                                -
---------------------------------------------
- 2021-06-28                                -
---------------------------------------------
.: WSM: Task - Create a product template which is based on the product template to create the item (WSM-394)

- v1.0.1094                                 -
---------------------------------------------
- 2021-06-20                                -
---------------------------------------------
.: WSM: Task - Update to use long polling to get notification (WSM-358)

---------------------------------------------
- 2021-06-14                                -
---------------------------------------------
.: WSM: Task - Notification (WSM-358)

- v1.0.10923                                -
---------------------------------------------
- 2021-05-25                                -
---------------------------------------------
.: WSM: BugFix - Url is not valid issue when creating store (WSM-380)
.: WSM: BugFix - Fix ETA when modifying invoice (WSM-379)
.: WSM: Task - Refresh invoice group when ETA date is updated (WSM-379)

---------------------------------------------
- 2021-05-24                                -
---------------------------------------------
.: WSM: Task - Update total value when number of promotion is changed (WSM-338)
.: WSM: Task - ETA is not accurate (WSM-379)

---------------------------------------------
- 2021-05-23                                -
---------------------------------------------
.: WSM: Task - Showing the number of the products which is going to be prepared in In Progress phase (WSM-352)
.: WSM: Task - Update business flow & screenshot (WSM-373)

---------------------------------------------
- 2021-05-22                                -
---------------------------------------------