@@ -4,6 +4,11 @@
 
 - v1.0.10941                                -
 ---------------------------------------------
+- 2021-06-30                                -
+---------------------------------------------
+.: WSM: BugFix - Profile image is not shown when store has no image in notification (WSW-124)
+
+---------------------------------------------
 - 2021-06-28                                -
 ---------------------------------------------
 .: WSM: Task - Create a product template which is based on the product template to create the item (WSM-394)
